\name{NEWS} \title{News for Package \pkg{rebmix}}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
\section{Changes in version 2.14.1}{ 
\itemize{
\item Class \code{"Histogram"} is added.
\item Methods \code{"chistogram"}, \code{"fhistogram"} and \code{mapclusters} are added.
\item Argument \code{y0} is removed from \code{REBMIX}, \code{bins}, \code{optbins} methods and from class \code{"REBMIX"}.
\item The C++ function \code{REBMIXK()} is added. It is called by the \code{REBMIX} method if the argument \code{Dataset} contains objects of type \code{"Histogram"}.
\item Numerous minor changes and debugging in C++ and R codes required due to the above changes.
\item Methods \code{"demix"}, \code{"dfmix"}, \code{"pemix"}, \code{"pfmix"} and all information criterion methods are modified for class \code{"Histogram"}.
}
}
\section{Changes in version 2.14.0}{ 
\itemize{
\item The package has been extended to three parametric family types.
\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXKDE()} and \code{REBMIXH()}.
\item Method \code{plot} is debugged and improved.
\item Value \code{"cdf"} is added to \code{what} argument.
\item Class \code{"EMMIX.Theta"} is added.
\item Method \code{EMMIX} is added.
}
}
\section{Changes in version 2.13.1}{ 
\itemize{
\item Reduced size of the vignette.
\item Conditional jump or move depends on uninitialised value(s.
}
}
\section{Changes in version 2.13.0}{ 
\itemize{
\item Method \code{plot} is debugged and improved.
\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXKDE()} and \code{REBMIXH()}.
\item EM algorithm is added to the C++ code for the improved estimation of all mixture model parameters.
\item Updated examples.
}
}
\section{Changes in version 2.12.0}{ 
\itemize{
\item Value \code{"density"} is replaced by \code{"pdf"} in \code{what} argument.
\item Value \code{"marginal"} is replaced by \code{"marginal pdf"} in \code{what} argument.