@@ -325,7 +325,7 @@ function(model,
 {
   digits <- getOption("digits"); options(digits = 15)
 
-  message("RCLRMIX Version 2.14.1")
+  message("RCLRMIX Version 2.14.2")
 
   flush.console()
 
