@@ -148,7 +148,7 @@ function(model,
 {
   digits <- getOption("digits"); options(digits = 15)
 
-  message("RCLSMIX Version 2.14.1")
+  message("RCLSMIX Version 2.14.2")
 
   flush.console()
 
@@ -194,7 +194,7 @@ function(model,
 {
   digits <- getOption("digits"); options(digits = 15)
 
-  message("BFSMIX Version 2.14.1")
+  message("BFSMIX Version 2.14.2")
 
   flush.console()
 
