@@ -167,7 +167,7 @@ function(model,
 {
   digits <- getOption("digits"); options(digits = 15)
 
-  message("RNGMIX Version 2.14.1")
+  message("RNGMIX Version 2.14.2")
 
   flush.console()
 
