@@ -33,6 +33,6 @@ currently not used.
 \author{Marko Nagode}
 \references{
 E. J. Hannan and B. G. Quinn. The determination of the order of an autoregression.
-Journal of the Royal Statistical Society. Series B, 41(2):190-195, 1979. \url{https://www.jstor.org/stable/2985032}.
+Journal of the Royal Statistical Society. Series B, 41(2):190-195, 1979. https://www.jstor.org/stable/2985032.
 }
 \keyword{information criterion}
