@@ -13,14 +13,14 @@ data(galaxy)
 }
 \source{
 K. Roeder. Density estimation with confidence sets exemplified by superclusters and voids
-in the galaxies. Journal of American Statistical Association, 85(411):617-624, 1990. \url{https://www.jstor.org/stable/2289993}.
+in the galaxies. Journal of American Statistical Association, 85(411):617-624, 1990. https://www.jstor.org/stable/2289993.
 }
 \references{
 S. Richardson and P. J. Green. On bayesian analysis of mixtures with an unknown number
-of components. Journal of the Royal Statistical Society B, 59(4):731-792, 1997. \url{https://www.jstor.org/stable/2985194}.\cr\cr
+of components. Journal of the Royal Statistical Society B, 59(4):731-792, 1997. https://www.jstor.org/stable/2985194.\cr\cr
 G. McLachlan and D. Peel. Contribution to the discussion of paper by s. richardson
-and p.j. green. Journal of the Royal Statistical Society B, 59(4):779-780, 1997. \url{https://www.jstor.org/stable/2985194}.\cr\cr
+and p.j. green. Journal of the Royal Statistical Society B, 59(4):779-780, 1997. https://www.jstor.org/stable/2985194.\cr\cr
 M. Stephens. Bayesian analysis of mixture models with an unknown number of components -
-an alternative to reversible jump methods. The Annals of Statistics, 28(1):40-74, 2000. \url{https://www.jstor.org/stable/2673981}.
+an alternative to reversible jump methods. The Annals of Statistics, 28(1):40-74, 2000. https://www.jstor.org/stable/2673981.
 }
 \keyword{datasets}
