@@ -35,11 +35,11 @@ The \pkg{rebmix} package provides R functions for random univariate and multivar
 \section{Introduction}
 To cite the REBMIX algorithm please refer to \citep{Nagode_Fajdiga_2011a, Nagode_Fajdiga_2011b, Nagode_2015, Nagode_2018, Panic_2020a, Panic_2020b, Panic_2020c}. For theoretical backgrounds please upload \url{http://doi.org/10.5963/JAO0302001}.
 
-\section{What's new in version \texttt{2.14.1}}
+\section{What's new in version \texttt{2.14.2}}
 
-Version \texttt{2.14.1} introduces several important improvements to the package. Estimation of mixture parameters can now be performed using the object of class \texttt{"Histogram"}. Objects of class \texttt{"Histogram"} represent the data with bins and bin counts. The object \texttt{"Histogram"} is best suited for discrete datasets, such as digital images. The image resolution can be quite high, but there is a finite number of realizations of the image pixel intensity. Often the number of realizations is much smaller than the number of observations. Therefore, it is more useful to represent the original dataset as an ordered pair $(\bar{y}_j, k_j)$, where $\bar{y}_j$ is the $j$th possible realization and $k_j$ is its count. The continuous datasets can also be shrunk, but some bias may occur. When the number of observations is large, the bias is usually small and vice versa, and when time and memory efficiency is desired, shrinking the dataset is recommended. The original dataset (object of class \texttt{data.frame}) is transformed with the newly added methods \texttt{"chistogram"}, \texttt{"fhistogram"} into a \texttt{"Histogram"}. The method \texttt{"fhistogram"} is memory intensive, but very fast. It is best suited for one-dimensional datasets. Since it precomputes all possible realizations, even if some of them are not in the dataset, the argument \texttt{shrink= TRUE } should be added. The method \texttt{"chistogram"} is slower, but memory efficient. When a new realization $y_j$ is found, it is appended. The two methods \texttt{"chistogram"} and \texttt{"fhistogram"} can be chained in a for loop so that multiple datasets can be shrunk into one \texttt{"Histogram"} object. This can be used when, for example, multiple images are to be loaded. Also, if for example a large dataset is to be processed, only parts of it can be loaded at a time to avoid large memory overhead. 
+Version \texttt{2.14.2} introduces several important improvements to the package. Estimation of mixture parameters can now be performed using the object of class \texttt{"Histogram"}. Objects of class \texttt{"Histogram"} represent the data with bins and bin counts. The object \texttt{"Histogram"} is best suited for discrete datasets, such as digital images. The image resolution can be quite high, but there is a finite number of realizations of the image pixel intensity. Often the number of realizations is much smaller than the number of observations. Therefore, it is more useful to represent the original dataset as an ordered pair $(\bar{y}_j, k_j)$, where $\bar{y}_j$ is the $j$th possible realization and $k_j$ is its count. The continuous datasets can also be shrunk, but some bias may occur. When the number of observations is large, the bias is usually small and vice versa, and when time and memory efficiency is desired, shrinking the dataset is recommended. The original dataset (object of class \texttt{data.frame}) is transformed with the newly added methods \texttt{"chistogram"}, \texttt{"fhistogram"} into a \texttt{"Histogram"}. The method \texttt{"fhistogram"} is memory intensive, but very fast. It is best suited for one-dimensional datasets. Since it precomputes all possible realizations, even if some of them are not in the dataset, the argument \texttt{shrink= TRUE } should be added. The method \texttt{"chistogram"} is slower, but memory efficient. When a new realization $y_j$ is found, it is appended. The two methods \texttt{"chistogram"} and \texttt{"fhistogram"} can be chained in a for loop so that multiple datasets can be shrunk into one \texttt{"Histogram"} object. This can be used when, for example, multiple images are to be loaded. Also, if for example a large dataset is to be processed, only parts of it can be loaded at a time to avoid large memory overhead.
 
-The \texttt{mapclusters} method is added for maximum a posteriori estimation of cluster membership. This method was added to complement the \texttt{RCLRMIX} method. The \texttt{RCLRMIX} method performs clustering and cluster membership prediction as well as cluster merging using different estimators. For large datasets, this can be very time consuming. Using objects of class \texttt{"histogram"} speeds up the \texttt{RCLRMIX} method enormously, but the cluster membership is only determined of the realizations $\bar{y}_j$ and the order is often not preserved either. Thus, we can use the \texttt{mapclusters} method to get the cluster membership on the original dataset of the object of the \texttt{"data.frame"} class. 
+The \texttt{mapclusters} method is added for maximum a posteriori estimation of cluster membership. This method was added to complement the \texttt{RCLRMIX} method. The \texttt{RCLRMIX} method performs clustering and cluster membership prediction as well as cluster merging using different estimators. For large datasets, this can be very time consuming. Using objects of class \texttt{"histogram"} speeds up the \texttt{RCLRMIX} method enormously, but the cluster membership is only determined of the realizations $\bar{y}_j$ and the order is often not preserved either. Thus, we can use the \texttt{mapclusters} method to get the cluster membership on the original dataset of the object of the \texttt{"data.frame"} class.
 
 Finally, all density estimation methods (\texttt{"demix"}, \texttt{"dfmix"}, \texttt{"pemix"}, \texttt{"pfmix"}) are modified to include estimation for objects of class \texttt{"Histogram"}.
 
@@ -51,7 +51,7 @@ Version \texttt{2.14.0} introduces three parametric variant of the Gumbel parame
 f(y) = \frac{1}{\sigma}\exp\left(\frac{y - \mu}{\xi \sigma} - \exp\left(\frac{y - \mu}{\xi \sigma}\right)\right),
 \end{equation}
 
-where $\xi \in \{-1, \textrm{NA}, 1\}$. If initially $\xi$ is set to $\textrm{NA}$, the package estimates $\xi$. Otherwise the  estimated $\xi$ equals initial $\xi$. The package was extended to handle three parameter parametric families. Class \texttt{"EMMIX.Theta"} and method \texttt{EMMIX} are added. They enable parameter estimation for all parametric families available in the package by using the EM algorithm only.  
+where $\xi \in \{-1, \textrm{NA}, 1\}$. If initially $\xi$ is set to $\textrm{NA}$, the package estimates $\xi$. Otherwise the  estimated $\xi$ equals initial $\xi$. The package was extended to handle three parameter parametric families. Class \texttt{"EMMIX.Theta"} and method \texttt{EMMIX} are added. They enable parameter estimation for all parametric families available in the package by using the EM algorithm only.
 
 Version \texttt{2.13.1} introduces Gumbel probability density
 \begin{equation}
