@@ -1,5 +1,10 @@
 \name{NEWS} \title{News for Package \pkg{rebmix}}
 \newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
+\section{Changes in version 2.14.2}{ 
+\itemize{
+\item Valgrind problems have been resolved.
+}
+}
 \section{Changes in version 2.14.1}{ 
 \itemize{
 \item Class \code{"Histogram"} is added.
